--- a/examples/with-svg/index.css
+++ b/examples/with-svg/index.css
@@ -8,9 +8,9 @@
   width: 100%;
   height: 100%;
   border: 1px solid #ddd;
+  background: rgba(0,0,0,.8);
 }
-#zoom-item>img{
+#zoom-item>svg{
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
